# lemonade_party_bot

./: .gitignore  Dockerfile  notifier.py  pyproject.toml
bot/: __main__.py  config_reader.py  mute.py  setup.py  webhook.py
bot/database/: models.py  requests.py
bot/database/migrations/: env.py
bot/filters/: admin.py
bot/handlers/: __init__.py  admin.py  user.py
bot/locales/: stub.pyi
bot/locales/ru/LC_MESSAGES/: txt.ftl
bot/middlewares/: __init__.py  antiflood.py  database.py  user.py
bot/utils/: i18n.py  secrets.py  telegram.py
lemonad_bot/: __main__.py  handlers.py  mute.py  sql.py  text.py  utils.py
tests/: __init__.py  conftest.py  mocked_aiogram.py  pytest.ini  test_i18n.py  test_start.py  test_text_messages.py  test_unique_codes.py  test_wheretogo_messages.py
