[tool.poetry]
name = "lemonad-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = ">=3.9,<4"
pyotp = "^2.8.0"
qrcode = "^7.4.2"
aiogram = "^3.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
environs = "^11.0.0"
pydantic-settings = "^2.2.1"
#asyncpg = "^0.29.0"
fluentogram = "^1.1.6"


[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["lemonad_bot"]
exclude = ["**/secrets"]
ignore = ["lemonad_bot/config.py"]
# defineConstant = { DEBUG = true }
typeCheckingMode = "off"
# reportPropertyTypeMismatch = "off"

reportMissingImports = true
reportMissingTypeStubs = false
