[tool.poetry]
name = "lemonad-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "bot" }]

[tool.poetry.dependencies]
python = ">=3.9,<4"
pyotp = "^2.8.0"
qrcode = "^7.4.2"
aiogram = "^3.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
environs = "^11.0.0"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
fluentogram = "^1.1.6"
uvloop = "^0.19.0"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
i18n = "^0.2"
alembic = "^1.13.1"
pytest = "^8.2.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs/bot"
no_warn_no_return = true
exclude = ["tests"]

[mypy-bot]
ignore_missing_imports = true


